[project]
name = "marsh-sim"
version = "2026.01.02"
description = "Python utilities for MARSH-Sim"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Marek S. Åukasiewicz", email = "marek@lukasiewicz.tech" }
]
license = "LGPL-3.0-only"
license-files = ["LICENSE.txt"]
dependencies = []

[project.urls]
Homepage = "https://marsh-sim.github.io/"
Repository = "https://github.com/marsh-sim/python.marsh-sim"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[dependency-groups]
dev = [
    "pymavlink>=2.4.49",
]
